# pluto-aguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _test_output.txt  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: agentguard-overview.html  approval-semantics.md  config-schema.md  demo.html  devto-article-v2.md  github-action-usage.md  launch-posts.md  owasp-control-matrix.md  research-report.md  risk-scoring.md  scan-results-1200.md  scan-results-methodology.md  show-hn-post.md  suppressions.md  trace-ingestion.md
examples/: agent-policy.yaml  approval-policy.yaml  approval-reuse-attack.jsonl  claude_desktop_config.json  insecure-agent-config.yaml  otel-genai-traces.jsonl  sample-launch-readiness.md  sample-traces.jsonl  secure-agent-config.yaml
examples/demo-agent-project/: .env  Dockerfile  agent.py  chain.py  requirements.txt
src/pluto_aguard/: __init__.py  cli.py  client_profiles.py  models.py  suppressions.py
src/pluto_aguard/baseline/: runner.py
src/pluto_aguard/controls/: registry.py  runner.py
src/pluto_aguard/evidence/: runner.py
src/pluto_aguard/monitor/: __init__.py  runner.py
src/pluto_aguard/reports/: __init__.py  html_report.py  sarif_report.py
src/pluto_aguard/rules/: owasp_mcp_top10.yaml
src/pluto_aguard/scanners/: __init__.py  ai_config_scanner.py  mcp_scanner.py  permission_scanner.py  runner.py
src/pluto_aguard/simulator/: __init__.py  runner.py
src/pluto_aguard/testing/: attack_packs.py  (+1 more)
tests/: test_cli.py  test_client_profiles.py  test_suppressions.py
tests/baseline/: test_baseline.py
tests/controls/: test_owasp.py
tests/evidence/: test_evidence.py
tests/monitor/: test_monitor.py
tests/scanners/: test_ai_config_scanner.py  test_mcp_scanner.py  test_permission_scanner.py  test_runner.py
tests/simulator/: test_simulator.py
tests/testing/: test_adversarial.py
