[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pluto-aguard"
version = "0.9.2"
description = "OWASP-inspired launch gate for AI agents — scan MCP configs, test policies, simulate risk, and generate compliance evidence. Static-only, offline, no API keys."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Arpitha Dhanapathi", email = "arpitha.dhanapathi@gmail.com" },
]
keywords = ["ai", "security", "agents", "mcp", "guardrails", "owasp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
monitor = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.scripts]
aguard = "pluto_aguard.cli:main"

[project.urls]
Homepage = "https://github.com/arpitha-dhanapathi/pluto-aguard"
Repository = "https://github.com/arpitha-dhanapathi/pluto-aguard"
Issues = "https://github.com/arpitha-dhanapathi/pluto-aguard/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/pluto_aguard/reports/html_report.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
